# rdp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  rdp.pc.in  rdpos.pc.in
python/: rdpos.c  setup.py
python/rdp/: __init__.py  rdp.py  wrapper.c
src/: CMakeLists.txt  config.h  cycle.c  cycle.h  defs.h  package_public.h  packages.c  packages.h  rdp.h  rdpos.c  rdpos.h
src/rdp/: CMakeLists.txt  config.h  cycle.c  cycle.h  packages.c  packages.h
tests/: CMakeLists.txt  rdp_test_echo_server.c  rdpos_test.c  rdpos_test_echo_client.c  test.c  test_echo_client.c  test_echo_server.c
tests/rdp/: CMakeLists.txt  rdp_test.c  rdp_test_echo_client.c  rdp_test_echo_server.c
tests/rdpos/: CMakeLists.txt  rdpos_test.c  rdpos_test_echo_client.c  rdpos_test_echo_server.c  rdpos_test_echo_server2.c
util/rdpos_terminal/: CMakeLists.txt  rdpos_terminal.c
